# cpp-gradient-descent-polynomial-regression

./: CMakeLists.txt  README.md  demo.cpp  gradient_descent.cpp  gradient_descent.hpp
